--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </aside> 
 
 <article>
-    <img src="./images/site.png" alt="cell">
+    <img src="./images/Tech Creche.png" alt="cell">
 </article>
 </main>
 
