--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/landing page/styles/style.css">
-    <title>landing page</title>
+    <title>Tech Creche</title>
 </head>
 <body>
     
 <header>
     <div>   
-        <h1>Melhores Preços</h1> 
-        <h1>Do mercado</h1>
+        <h1>O futuro</h1> 
+        <h1>E a educação</h1>
     </div>
   
 <ul>
@@ -37,7 +37,7 @@
 </aside> 
 
 <article>
-    <img src="./images/Tech Creche.png" alt="cell">
+    <img src="Tech Creche.png" alt="logo">
 </article>
 </main>
 
